tests/character_class_empty_diag/expected_err.txt
grammar.peg:1:9: error: Character classes cannot be empty.
 1 | Root <- []
   |         ~~
